K8S-Project-2/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: k8sproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: k8sproject
      labels:
        app: backend
    spec:
      containers:
        - name: backend-cont
          image: jarvuy0555/k8sproject-backend
          ports:
          - containerPort: 5001
