K8S-Project-2/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: k8sproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: k8sproject
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-cont
          image: jarvuy0555/k8sproject-frontend
          ports:
          - containerPort: 80
