K8S-Project-2/deployment-mongodb.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb-deployement
  namespace: k8sproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      name: mongodb-pod
      namespace: k8sproject
      labels:
        app: database
    spec:
      containers:
      - name: mongodb-cont
        image: mongo:latest
        ports: 
        - containerPort: 27017
      volumes:
        - name: mongo-data
          persistentVolumeClaim: 
            claimName: mongodb-pvc
