K8S-Project-2/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: k8sproject
spec:
  selector:
    app: backend
  ports:
  - port: 5001
    targetPort: 5001
