K8S-Project-2/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: k8sproject
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
