K8S-Project-2/service-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: k8sproject
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017     
    targetPort: 27017
